@@ -1,6 +1,9 @@
 Release Note
 
 * current
+  * check sub to reduce nFilesOnHold when merging is killed
+  * added protection to updateUmergeDataset to avoid concurrent update
+  * disabled updating nFilesOnHold by transferring for trn_*
   * fixed Closer to update dataset status after unmerge datasets are updated
   * removed priority reduction for ES retry
   * changed datasetManager to kick stalled merging jobs
